# cryptographic-id-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE.txt  Makefile  Readme.md  build.rs
.github/: dependabot.yml
.github/workflows/: test.yml
src/: actions.rs  conv.rs  ed25519.rs  fs.rs  main.rs  message.rs  prime256v1.rs  qrcode.rs  scan.rs  sign.rs  test_common.rs  time.rs  tpm2.rs
src/tpm2/: common.rs  mod.rs  sign.rs
supply-chain/: config.toml
tests/: run_test.sh  run_with_test_tpm2.sh
tests/files/: read_file
tests/files/ed25519/: signature  test_private_key
tests/files/message/: verify_prime256v1
tests/files/message/sign/: key  result
tests/files/prime256v1/verify/: signature
tests/files/qrcode/: as_string
tests/files/scan/: signing_key
tests/files/sign/: ed25519
tests/files/sign/tpm2/: ecc.priv  public_key.der  public_key.pem  public_key.raw
tests/files/tpm2/common/public/: ecc.pub
tests/files/tpm2/sign/read_pcr_file/multiple/: pcrs
tests/files/tpm2/sign/read_private_file/: ecc.priv
tests/files/tpm2/sign/read_public_file/: ecc.pub
tests/files/tpm2/sign/sign/handle/: handle  public_key.der  public_key.pem  public_key.raw
tests/files/tpm2/sign/sign/handle_pcr_5_6_7/: handle  (+3 more)
tests/swtpm/: tpm2-00.permall
usr/lib/cryptographic_id/: initramfs_helper  restore_public_key  show_identities
usr/lib/dracut/modules.d/90cryptographic-id/: module-setup.sh  systemd_wants.conf
usr/lib/initcpio/install/: cryptographic-id  cryptographic_id
usr/lib/systemd/system/: cryptographic_id.service  cryptographic_id_helper@.service
(+6 files in other folders)
