[package]
name = "cryptographic-id-rs"
version = "0.2.2"
authors = ["Simon Brand <simon.brand@postadigitale.de>"]
edition = "2021"

[dependencies]
base64 = "0.21"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
prost = "0.12"
qrcode = { version = "0.12", default-features = false }
rand = "0.8"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.6"
